Bug 105885 - CHISQ.DIST.RT function
Summary: CHISQ.DIST.RT function
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Winfried Donkers
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-09 16:04 UTC by raal
Modified: 2017-02-26 12:44 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2017-02-09 16:04:57 UTC
Description:
function =CHISQ.DIST.RT(-13.27, 5) returns 1 in Calc, but should return error

Actual Results:  
1

Expected Results:
error


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:51.0) Gecko/20100101 Firefox/51.0
Comment 1 raal 2017-02-09 16:06:20 UTC
setting to New -  confirmed by Winfried.
Comment 2 Commit Notification 2017-02-21 21:34:38 UTC
Winfried Donkers committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0aca3bde3ae6d1acc241e3aecde5ebca89b75b1b

tdf#105885 fix incorrect result with CHISQ.DIST.RT.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.